# cind

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cmk.yaml
cmake/: GuileRuntime.cmake  WebKitSkia.cmake  lsan.supp
design/: 01-kernel.md  02-buffer.md  03-input.md  04-workbench.md  05-jump.md  06-completion.md  07-decoration.md  08-gui-chrome.md  09-guile-first.md  README.md
design/archive/: hoot-wasmtime.md
docs/: async-runtime.md  command-loop.md  diagnostics.md  gui-architecture.md  gui-inspector.md  location-lists.md  lsp.md  projects.md  scripting.md  workbenches.md  workspace-edits.md
scheme/cind/: application.scm  ares.scm  async.scm  buffers.scm  command.scm  completion.scm  core.scm  development.scm  emacs.scm  extension.scm  helix.scm  input.scm  introspect.scm  lifecycle.scm  lsp.scm  meow.scm  minibuffer.scm  paredit.scm  pointer.scm  state.scm  structural.scm  toy-modal.scm  vim.scm  workbench.scm
src/: CMakeLists.txt
src/async/: runtime.cpp  runtime.hpp
src/cli/: bench.cpp  bench.hpp  fixture_runner.cpp  fixture_runner.hpp  main.cpp  repl.cpp  repl.hpp  session.cpp  session.hpp  style_loader.cpp  style_loader.hpp
src/commands/: editor_commands.cpp  editor_commands.hpp  file_io.cpp  file_io.hpp
src/cpp_lexer/: lexer.cpp  lexer.hpp  lexer_state.hpp  token.hpp  token_buffer.cpp  token_buffer.hpp
src/document/: anchor.hpp  char_source.hpp  document.cpp  document.hpp  line_index.cpp  line_index.hpp  snapshot.hpp  text.cpp  text.hpp  text_types.hpp
src/editor/: basic_commands.cpp  basic_commands.hpp  buffer.cpp  buffer.hpp  command.cpp  command.hpp  command_loop.cpp  command_loop.hpp  completion.cpp  completion.hpp  composed_view.cpp  composed_view.hpp  cpp_mode.cpp  cpp_mode.hpp  default_keymap.cpp  default_keymap.hpp  diagnostic.hpp  editing_mechanisms.cpp  editing_mechanisms.hpp  editor_application.cpp  editor_application.hpp  ids.hpp  input_state.cpp  input_state.hpp  input_strategy.cpp  input_strategy.hpp  interaction.cpp  interaction.hpp  jump.cpp  jump.hpp  keymap.cpp  keymap.hpp  language.cpp  language.hpp  language_mechanism.cpp  language_mechanism.hpp  location_list.cpp  location_list.hpp  location_list_mode.cpp  location_list_mode.hpp  (+37 more)
src/formatting/: clang_format_style.cpp  clang_format_style.hpp  cpp_indent_style.hpp  format_role.hpp
src/gui/: editor_model.cpp  editor_model.hpp  editor_state.hpp  frame_controller.cpp  frame_controller.hpp  inspect_cli.cpp  inspect_server.cpp  inspect_server.hpp  inspection.cpp  inspection.hpp  mac_scroll_bridge.hpp  mac_scroll_bridge.mm  main.cpp  motion.cpp  motion.hpp  scroll_timeline.cpp  scroll_timeline.hpp  skia_presenter.cpp  skia_presenter.hpp
src/indentation/: expression_continuation.cpp  expression_continuation.hpp  indentation_service.cpp  indentation_service.hpp
src/lsp/: completion.cpp  completion.hpp  diagnostics.cpp  diagnostics.hpp  json.hpp  json_rpc.cpp  json_rpc.hpp  navigation.cpp  navigation.hpp  protocol.cpp  protocol.hpp  protocol_json.hpp  refactor.cpp  refactor.hpp  registry.cpp  registry.hpp  request.hpp  session.cpp  session.hpp
src/presentation/: chrome.hpp  cursor_shape.hpp  modeline.hpp  position_hint.hpp  profile.hpp  style.hpp  theme.hpp
src/project/: project_files.cpp  project_files.hpp  search_results.cpp  search_results.hpp
src/script/: async_host.cpp  async_host.hpp  guile_async_bridge.cpp  guile_async_bridge.hpp  guile_call_stats.hpp  guile_runtime.cpp  guile_runtime.hpp
src/syntax/: analysis.cpp  analysis.hpp  green_node.cpp  green_node.hpp  parser.cpp  pp_conditional.hpp  structure.cpp  structure.hpp  syntax_kind.hpp  syntax_tree.cpp  syntax_tree.hpp
src/tui/: editor.cpp  editor.hpp  terminal.cpp  terminal.hpp
src/ui/: ansi_renderer.cpp  ansi_renderer.hpp  char_width.cpp  char_width.hpp  compose_line.cpp  compose_line.hpp  editor_scene.cpp  editor_scene.hpp  line_signs.cpp  line_signs.hpp  list_view.hpp  scene.hpp  scene_damage.cpp  scene_damage.hpp  scene_layout.cpp  scene_layout.hpp  style.hpp  text_position.cpp  text_position.hpp  view_tree.cpp  view_tree.hpp
tests/: CMakeLists.txt
tests/async/: runtime_tests.cpp
tests/commands/: file_io_tests.cpp
tests/document/: document_tests.cpp  text_tests.cpp
tests/editor/: application_tests.cpp  composed_view_tests.cpp  editor_application_tests.cpp  guile_runtime_tests.cpp  jump_tests.cpp  location_list_tests.cpp
tests/fixtures/: ctor_sequence.yaml  enter_between_braces.yaml  if_single_statement.yaml  namespace_body.yaml  namespace_body_indented.yaml  switch_case_dedent.yaml  typed_case_dedent.yaml  undo_single_unit.yaml
tests/formatting/: clang_format_style_tests.cpp
tests/gui/: editor_model_tests.cpp  frame_controller_tests.cpp
tests/indentation/: indentation_tests.cpp
tests/lexer/: lexer_tests.cpp  relex_tests.cpp  token_buffer_tests.cpp
tests/lsp/: lsp_tests.cpp  test_server.cpp
tests/project/: project_files_tests.cpp  search_results_tests.cpp
tests/script/: async_host_tests.cpp
tests/syntax/: concurrency_tests.cpp  green_tree_tests.cpp  parser_tests.cpp  reparse_tests.cpp  structure_tests.cpp
tests/tui/: terminal_tests.cpp
tests/ui/: inspection_tests.cpp  scene_damage_tests.cpp  skia_presenter_tests.cpp  ui_tests.cpp
